# deep_learning

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt
src/deep_learning/include/deep_learning/: NeuralNetwork.cpp
src/neural/: CMakeLists.txt
src/neural/include/neural/: ActivationLayer.hpp  Danse.hpp  Layer.hpp  NeuralNetwork.hpp  Types.hpp
src/neural/src/: NeuralNetwork.cpp  NeuralNetwork.hpp
